--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,14 @@
+.left {
+}
+
 .middle {
   height: auto;
+  align-self: center;
+}
+.right {
+  margin-right: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
